# pdf_render_maintained

./: .gitignore  .pubignore  CHANGELOG.md  PUBLISHING_GUIDE.md  README.md  pubspec.yaml
example/: README.md
example/ios/: Podfile
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
example/web/: index.html
ios/: pdf_render_maintained.podspec
ios/Classes/: PdfRenderPlugin.m
ios/pdf_render_maintained/: Package.swift
lib/: pdf_render_maintained.dart  pdf_render_widgets.dart
lib/src/: pdf_render_method_channel.dart  pdf_render_screen.dart  pdf_render_view.dart
lib/src/_internal/: file_stub.dart
lib/src/interfaces/: interactive_viewer.dart
lib/src/utils/: ffi_wrapper.dart  web_pointer.dart
lib/src/web/: pdf.js.dart  pdf_render_web_plugin.dart
lib/src/wrappers/: html.dart  js_util.dart
lib/src/wrappers/impls/: html_wasm.dart  js_interop.dart  js_util.dart  js_util_stub.dart  js_util_web.dart  pdf_texture_web.dart
linux/src/: pdf_render_plugin.cpp
macos/: pdf_render_maintained.podspec
test/: pdf_render_test.dart
windows/: CMakeLists.txt
windows/src/: pdf_render_plugin.cpp
